RESOLVED FIXED 93382
Rewire the same-origin checks for the JavaScriptCore bindings through BindingSecurity
https://bugs.webkit.org/show_bug.cgi?id=93382
Summary Rewire the same-origin checks for the JavaScriptCore bindings through Binding...
Adam Barth
Reported 2012-08-07 12:17:21 PDT
Rewire the same-origin checks for the JavaScriptCore bindings through BindingSecurity
Attachments
Patch (5.09 KB, patch)
2012-08-07 12:23 PDT, Adam Barth
no flags
Patch (5.06 KB, patch)
2012-08-07 12:25 PDT, Adam Barth
no flags
hopefully builds on EFL now (5.54 KB, patch)
2012-08-07 13:30 PDT, Adam Barth
eric: review+
Adam Barth
Comment 1 2012-08-07 12:23:48 PDT
Adam Barth
Comment 2 2012-08-07 12:25:09 PDT
Gyuyoung Kim
Comment 3 2012-08-07 12:47:02 PDT
Adam Barth
Comment 4 2012-08-07 13:30:43 PDT
Created attachment 156989 [details] hopefully builds on EFL now
Eric Seidel (no email)
Comment 5 2012-08-07 13:52:08 PDT
Comment on attachment 156989 [details] hopefully builds on EFL now I wonder what, if any, perf affect this has on DOM benchmarks.
Adam Barth
Comment 6 2012-08-07 14:03:29 PDT
> I wonder what, if any, perf affect this has on DOM benchmarks. I'll run the perf tests before landing, but I don't expect any trouble.
Adam Barth
Comment 7 2012-08-07 16:12:17 PDT
The work to rewrite allowsAccessFrom through BindingSecurity is in Bug 93407.
Sam Weinig
Comment 8 2012-08-07 17:25:39 PDT
This seems OK to me, but I would like to see the extra indirect go away. A follow up patch would be fine for that.
Adam Barth
Comment 9 2012-08-07 22:24:33 PDT
Thanks. Will do.
Adam Barth
Comment 10 2012-08-08 17:41:09 PDT
Csaba Osztrogonác
Comment 11 2012-08-09 14:15:53 PDT
(In reply to comment #10) > Committed r125126: <http://trac.webkit.org/changeset/125126> It caused an assertion on Qt and on GTK. Could you check it, please? https://bugs.webkit.org/show_bug.cgi?id=93654
Adam Barth
Comment 12 2012-08-09 14:23:17 PDT
> It caused an assertion on Qt and on GTK. Could you check it, please? https://bugs.webkit.org/show_bug.cgi?id=93654 Certainly.
Note You need to log in before you can comment on or make changes to this bug.