third_party/WebKit/Source/WebCore/bindings/js/BindingState.cpp
@@ -48,4 +48,9 @@ DOMWindow* firstDOMWindow(ExecState* exec)
     return asJSDOMWindow(exec->dynamicGlobalObject())->impl();
 }
 
+void immediatelyReportUnsafeAccessTo(ExecState* exec, Document* target)
+{
+    printErrorMessageForFrame(target->frame(), target->domWindow()->crossDomainAccessErrorMessage(activeDOMWindow(exec)));
+}
+
 }
